--- a/src/index.html
+++ b/src/index.html
@@ -909,13 +909,13 @@
             </div>
           </div>
           <h3 class="details-card__title">Укажите контактные данные</h3>
-          <input type="text" class="details__input request__input" name="username" id="details-username" placeholder="Ваши ФИО">
-          <input type="text" class="details__input request__input" name="city" id="details-city" placeholder="Город">
-          <input type="text" class="details__input request__input" name="phone" id="details-phone"
+          <input type="text" class="details__input request__input req-input" name="username" id="details-username" placeholder="Ваши ФИО">
+          <input type="text" class="details__input request__input req-input" name="city" id="details-city" placeholder="Город">
+          <input type="text" class="details__input request__input req-input" name="phone" id="details-phone"
             placeholder="Телефон">
           <div class="details__buttons">
             <button class="button button_light details__button card__button_prev">Назад</button>
-            <button class="button details__button card__button_next">Далее</button>
+            <button class="button details__button card__button_next" id="details-button">Далее</button>
           </div>
         </div>
         <!-- .details__card -->
@@ -930,13 +930,13 @@
             </div>
           </div>
           <h3 class="details-card__title">Укажите контактные данные</h3>
-          <input type="text" class="details__input request__input" name="name-holder" id="name-holder" placeholder="ФИО держателя карты">
+          <input type="text" class="details__input request__input" name="holder" id="name-holder" placeholder="ФИО держателя карты">
           <input type="text" class="details__input request__input" name="bank" id="bank" placeholder="Наименование банка">
-          <input type="text" class="details__input request__input" name="bic-bank" id="bic-bank" placeholder="БИК  банка">
-          <label for="bic-bank" class="details-input__label">Например, ПАО Сбербанк</label>
+          <label for="bank" class="details-input__label">Например, ПАО Сбербанк</label>
+          <input type="text" class="details__input request__input" name="bicbank" id="bic-bank" placeholder="БИК  банка">
           <input type="text" class="details__input request__input" name="account" id="account" placeholder="Лицевой счет">
-          <input type="text" class="details__input request__input" name="cor-account" id="cor-account" placeholder="Кор.счет">
-          <input type="text" class="details__input request__input" name="card-number" id="card-number" placeholder="Номер карты">
+          <input type="text" class="details__input request__input" name="coraccount" id="cor-account" placeholder="Кор.счет">
+          <input type="text" class="details__input request__input" name="cardnumber" id="card-number" placeholder="Номер карты">
           <label for="card-number" class="details-input__label">Не путать с лицевым счётом, номер карты указан на самой карте</label>
           <div class="details__buttons">
             <button class="button button_light details__button card__button_prev">Назад</button>
